--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,36 @@
-Flask==2.0.1
-Flask-JWT-Extended==4.2.0
-Flask-Limiter==1.4
-pymongo==3.12.1
+async-timeout==4.0.3
+blinker==1.7.0
+cfgv==3.4.0
+click==8.1.7
+Deprecated==1.2.14
+distlib==0.3.8
+dnspython==2.4.2
+filelock==3.13.1
+Flask==3.0.0
+Flask-Cors==4.0.0
+Flask-JWT-Extended==4.6.0
+Flask-Limiter==3.5.0
+gunicorn==21.2.0
+identify==2.5.33
+importlib-resources==6.1.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+limits==3.7.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+mdurl==0.1.2
+nodeenv==1.8.0
+ordered-set==4.1.0
+packaging==23.2
+platformdirs==4.1.0
+pre-commit==3.6.0
+Pygments==2.17.2
+PyJWT==2.8.0
+pymongo==4.6.1
+PyYAML==6.0.1
+redis==5.0.1
+rich==13.7.0
+typing_extensions==4.9.0
+virtualenv==20.25.0
+Werkzeug==3.0.1
+wrapt==1.16.0
